Cosmetic changes in response to documentation

--- a/BreezeMvcAngularSpaTemplateVsix/ProjectTemplates/BreezeNgMvcSpaProjectTemplate.cshtml/app/todo.view.html
+++ b/BreezeMvcAngularSpaTemplateVsix/ProjectTemplates/BreezeNgMvcSpaProjectTemplate.cshtml/app/todo.view.html
@@ -1,7 +1,7 @@
 ﻿<!-- TodoList page partial view -->
 <div style="position: absolute; top: 20px; left:2em;">
-<a href="#/about"  class="pageLink" >About</a>&nbsp; 
-<a data-ng-click="getTodos()" class="pageLink" >Refresh</a>     
+<a href="#/about"  class="pageLink" >About</a>&nbsp;&nbsp; 
+<a data-ng-click="refresh()" class="pageLink" >Refresh</a>     
 </div>  
    
 <p class="error" data-ng-show="error">{{error}}</p>
