Cosmetics to match documentation + Q NuGet pkg

--- a/BreezeMvcAngularSpaTemplateVsix/ProjectTemplates/BreezeNgMvcSpaProjectTemplate.cshtml/app/todo.view.html
+++ b/BreezeMvcAngularSpaTemplateVsix/ProjectTemplates/BreezeNgMvcSpaProjectTemplate.cshtml/app/todo.view.html
@@ -1,6 +1,6 @@
 ﻿<!-- TodoList page partial view -->
 <div style="position: absolute; top: 20px; left:2em;">
-<a href="#/about"  class="pageLink" >About</a>&nbsp;&nbsp; 
+<a href="#/about" class="pageLink" >About</a> 
 <a data-ng-click="refresh()" class="pageLink" >Refresh</a>     
 </div>  
    
